- improved error handling in database module
- error log messages will get LogLevel 0 and will always be logged (changed LogLevel in various error messages over some Perl Modules)
- fixed a bug regarding the ConnectionManager HTTP response (thanks to lombao)
- moved from Ogg::Vorbis::Header to Ogg::Vorbis::Header::PurePerl and finally added code for tags from ogg files

Version 0.62.0
05-05-2013

- fixed issue #13 (https://github.com/geuma/pDLNA/issues/13) -aka- uninitialized value $request_line
- added support for transcoding all supported types of audio files to WMAv1
- added code to remove newly added ExcludeDirs and ExcludeItems from ContentLibrary
- added execution time to SQL query logging
- added configuration option EnableGeneralStatistics and code to gather statistics (memory usage, media items) every minute and added graphs in WebUI for the EnableGeneralStatistics configuration parameter (currently not available on FreeBSD)
- modified Check4Updates LogCategory to default, since LogCategory update was not available at all
- fixed a bug regarding UPnP Services, where only one service is available (PDLNA::Devices)
- FunFeature: added configuration option Check4UpdatesNotification: a message to a connected urn:samsung.com:serviceId:MessageBoxService service will be sent if a new version of pDLNA is available (if Check4Updates is enabled)
- some general improvements regarding database connections, which lowers memory consumption

Version 0.61.0
07-03-2013

- fixed issue #7 (https://github.com/geuma/pDLNA/issues/7) -aka- Uninitialized value in SSDP.pm
- reworked/improved the code for parsing received SSDP messages
- PDLNA::DeviceList object has been moved to database (feature/issue #11 (https://github.com/geuma/pDLNA/issues/11))
- added a Check4Updates button to the WebUI (feature/issue #12 (https://github.com/geuma/pDLNA/issues/12))
- added transcoding LogCategory for information about the Transcoding Profile selection