@@ -69,7 +69,7 @@ use_ok ('GD');
 use_ok ('GD::Graph::area');
 use_ok ('Getopt::Long::Descriptive');
 use_ok ('Image::Info');
-use_ok ('IO::Interface');
+use_ok ('IO::Interface::Simple');
 use_ok ('IO::Select');
 use_ok ('IO::Socket');
 use_ok ('IO::Socket::INET');
@@ -77,8 +77,6 @@ use_ok ('IO::Socket::Multicast');
 use_ok ('LWP::UserAgent');
 use_ok ('MP3::Info');
 use_ok ('MP4::Info');
-use_ok ('Net::Address::Ethernet');
-use_ok ('Net::Interface');
 use_ok ('Net::IP');
 use_ok ('Net::Netmask');
 use_ok ('Movie::Info');
